@@ -69,6 +69,7 @@ private:
 	bool isPlayerAvailable();
 	static bool isSoundValid(const Sound &sound);
 	static bool isHighPriority(Event event);
+	static bool isEmittedDuringCatchup(Event event);
 
 	qint64 m_lastSoundMsec;
 	QHash<int, Sound> m_sounds;
