@@ -37,6 +37,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Properly update avatar on user markers when they reconnect with a different one. Thanks xxxx for reporting.
  * Fix: Show own user marker again when using the laser pointer.
  * Fix: Use previous avatar when using the reconnect button after a disconnect.
+ * Fix: Don't trigger a cacophony of notifications after joining a session, just play a single notification once catchup is done instead.
 
 2023-09-30 Version 2.2.0-beta.8
  * Fix: Apply color wheel direction to color dialogs too. Thanks Blozzom for reporting.
